@@ -23,7 +23,7 @@
 #' LD.sign.test("hla-family-data")
 #' # Returning only a data frame of results
 #' LD.res <- LD.sign.test("hla-family-data",returnFrame = TRUE,verbose=FALSE)
-#' @references Kazutoyo et al. Hum Immunol. 2019 (https://doi.org/10.1016/j.humimm.2019.01.010)
+#' @references Osoegawa et al. Hum Immunol. 2019 (https://doi.org/10.1016/j.humimm.2019.01.010)
 
 LD.sign.test <- function(dataName,verbose=TRUE,returnFrame=FALSE) {
   
