@@ -14,8 +14,8 @@ knitr::opts_chunk$set(
 )
 ```
 
-# pould 
-v0.8.2.9000 (June 21, 2019)
+# Phased Or Unphased LD (pould) 
+v0.8.3.9000 (July 3, 2019)
 
 The *pould* package calculates four linkage disequilibrium (LD) statistics -- *D<sup>'</sup>*, *W<sub>n</sub>* and the two conditional asymmetric LD (cALD) measures, *W<sub>A/B</sub>* and *W<sub>B/A</sub>* -- for genotype data from pairs of genetic loci, and can treat these data as either phased or unphased for these calculations. In addition, *pould* includes a wrapper function (*LDWrap()*) that parses multi-locus haplotypes reported in the 17th International HLA and Immunogenetics Workshop (IHIW) Family Haplotype Project's HaplObserve output format, as well as *LD.sign.test()*, a function that applies a sign test to LD values for phased and unphased haplotypes generated by *LDWrap()* for a given dataset, and *LD.heat.map()*, a function that generates PNG-formatted heat-map plots for each LD measure. For more information about cALD, see: Thomson G, Single RM. **Conditional asymmetric linkage disequilibrium (ALD): extending the biallelic r2 measure.** [Genetics. 2014;198(1):321-31](https://doi.org/10.1534/genetics.114.165266).
 
@@ -26,6 +26,8 @@ The *pould* package can be installed from GitHub using the R *devtools* package 
   skipping pax global extended headers
 `
 This warning does not impact the function of the package. Installing [Rtools v3.5](https://cran.r-project.org/bin/windows/Rtools/) will prevent these warnings.
+
+**Note**: The *cALD()* function calls the *LDkl()* function from the R *gap* package. The version of the *gap* package currently in CRAN (v1.1-22) limits *LDkl()* to 100 alleles per locus. Analyses in which the product of the number of alleles at the two loci is more than 10000 will cause R to abort. This limit has been changed to 1000 alleles per locus in *gap* version 1.1-23. This version is available on GitHub, and can be installed using the *devtools* package -- `devtools::install_github("jinghuazhao/R/gap")`.
 
 ## Example
 In addiiton to simply calculating LD values, *pould* can be used to compare LD for phased and unphased versions of the same dataset, e.g., to examine the extent to which phasing via segregation analysis impacts LD relative to phasing estimation via the expectation-maximization (EM) algorithm. In the example below, DRB1 and DQB1 genotype data were extracted from six-locus haplotypes that had been phased using the EM method ([Mack et al. Genes Immun. 2018](https://doi.org/10.1038/s41435-017-0006-8)). In the first application of *cALD()*, that phasing information is ignored, and the EM algorithm is applied to estimate haplotypes. In the second application of *cALD()*, the original six-locus phasing information is retained.
