@@ -1,14 +1,16 @@
 <!-- README.md is generated from README.Rmd. Please edit that file -->
-pould
-=====
+Phased Or Unphased LD (pould)
+=============================
 
-v0.8.2.9000 (June 21, 2019)
+v0.8.3.9000 (July 3, 2019)
 
 The *pould* package calculates four linkage disequilibrium (LD) statistics -- *D<sup>'</sup>*, *W<sub>n</sub>* and the two conditional asymmetric LD (cALD) measures, *W<sub>A/B</sub>* and *W<sub>B/A</sub>* -- for genotype data from pairs of genetic loci, and can treat these data as either phased or unphased for these calculations. In addition, *pould* includes a wrapper function (*LDWrap()*) that parses multi-locus haplotypes reported in the 17th International HLA and Immunogenetics Workshop (IHIW) Family Haplotype Project's HaplObserve output format, as well as *LD.sign.test()*, a function that applies a sign test to LD values for phased and unphased haplotypes generated by *LDWrap()* for a given dataset, and *LD.heat.map()*, a function that generates PNG-formatted heat-map plots for each LD measure. For more information about cALD, see: Thomson G, Single RM. **Conditional asymmetric linkage disequilibrium (ALD): extending the biallelic r2 measure.** [Genetics. 2014;198(1):321-31](https://doi.org/10.1534/genetics.114.165266).
 
 The *pould* package can be installed from GitHub using the R *devtools* package -- `devtools::install_github("IHIW/pould/pould")`.
 
 **Note**: When installing *pould* from GitHub in a Windows environment, the following warning message may appear on Windows systems that do not have Rtools v3.5 installed: `In untar2(tarfile, files, list, exdir) :   skipping pax global extended headers` This warning does not impact the function of the package. Installing [Rtools v3.5](https://cran.r-project.org/bin/windows/Rtools/) will prevent these warnings.
+
+**Note**: The *cALD()* function calls the *LDkl()* function from the R *gap* package. The version of the *gap* package currently in CRAN (v1.1-22) limits *LDkl()* to 100 alleles per locus. Analyses in which the product of the number of alleles at the two loci is more than 10000 will cause R to abort. This limit has been changed to 1000 alleles per locus in *gap* version 1.1-23. This version is available on GitHub, and can be installed using the *devtools* package -- `devtools::install_github("jinghuazhao/R/gap")`.
 
 Example
 -------
@@ -23,10 +25,10 @@ library("pould")
 data(drb1.dqb1.demo)
 cALD(drb1.dqb1.demo,inPhase=FALSE)
 #> Calculating D', Wn and conditional ALD for 53 unphased genotypes at the DRB1 and DQB1 loci.
-#> D' for DRB1~DQB1 haplotypes: 0.958463656600392 (0.9585) 
-#> Wn for DRB1~DQB1 haplotypes: 0.811184755020453 (0.8112) 
-#> Variation of DQB1 conditioned on DRB1 (WDQB1/DRB1) = 0.903300945458266 (0.9033)
-#> Variation of DRB1 conditioned on DQB1 (WDRB1/DQB1) = 0.778712696382408 (0.7787)
+#> D' for DRB1~DQB1 haplotypes: 0.958463647658413 (0.9585) 
+#> Wn for DRB1~DQB1 haplotypes: 0.81118475141281 (0.8112) 
+#> Variation of DQB1 conditioned on DRB1 (WDQB1/DRB1) = 0.90330093631528 (0.9033)
+#> Variation of DRB1 conditioned on DQB1 (WDRB1/DQB1) = 0.77871269812943 (0.7787)
 
 cALD(drb1.dqb1.demo,inPhase=TRUE)
 #> Calculating D', Wn and conditional ALD for 106 phased genotypes at the DRB1 and DQB1 loci.
