@@ -26,7 +26,7 @@ This function accepts *_LD_results.csv files generated by LDWrap() as input, and
 LD.heat.map("hla-family-data")
 }
 \references{
-Kazutoyo et al. Hum Immunol. 2019 https://doi.org/10.1016/j.humimm.2019.01.010
+Osoegawa et al. Hum Immunol. 2019 https://doi.org/10.1016/j.humimm.2019.01.010
 }
 \keyword{disequilibrium}
 \keyword{heat}
