@@ -36,7 +36,7 @@ LD.sign.test("hla-family-data")
 LD.res <- LD.sign.test("hla-family-data",returnFrame = TRUE,verbose=FALSE)
 }
 \references{
-Kazutoyo et al. Hum Immunol. 2019 (https://doi.org/10.1016/j.humimm.2019.01.010)
+Osoegawa et al. Hum Immunol. 2019 (https://doi.org/10.1016/j.humimm.2019.01.010)
 }
 \keyword{disequilibrium}
 \keyword{linkage}
